# microdata

./: .gitignore  pyproject.toml  test_mospi_microdata.ipynb
scripts/: ingest_csv.py
src/mospi_microdata/: __init__.py  catalog.py  db.py  errors.py  ingest.py  nada.py  server.py  survey.py
src/mospi_microdata/adapters/: __init__.py  asi.py  base.py
tests/: test_db.py  test_nada.py
